--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "package": "electron-packager ./  --all --out ~/Desktop"
   },
   "dependencies": {
+    "electron": "^1.7.8",
     "fs-jetpack": "^0.9.2",
     "macaddress": "^0.2.8",
     "mysql": "^2.10.2",
