--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "electron": "^1.7.8",
+    "excel-export": "^0.5.1",
     "fs-jetpack": "^0.9.2",
     "macaddress": "^0.2.8",
     "mysql": "^2.10.2",
