--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "start": "electron .",
-    "rebuild": "electron-rebuild -f -w sqlite3",
+    "rebuild": "electron-rebuild -f -w sqlite3 -v 1.4",
     "package": "electron-packager ./  --all --out ~/Desktop"
   },
   "dependencies": {
